# sini2D

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
include/: Geometry.hpp
include/geometry/: Line.hpp  Line.inl  Polygon.hpp
include/gl/: Camera.hpp  SimpleRenderer.hpp  glutil.hpp
include/math/: MathUtilities.hpp  MathUtilitiesBase.hpp  Matrix.hpp  Matrix.inl  Vector.hpp  Vector.inl
include/sdl/: SubsystemInitializer.hpp  Window.hpp
include/sini/: CudaCompat.h  CudaCompat.hpp  Geometry.hpp
include/sini/geometry/: Line.hpp  Line.inl  Polygon.hpp
include/sini/gl/: Camera.hpp  GLContext.hpp  SimpleRenderer.hpp  Window.hpp  glutil.hpp
include/sini/math/: MathUtilities.hpp  MathUtilities.inl  MathUtilitiesBase.hpp  MathUtilitiesBase.inl  Matrix-defs.h  Matrix.h  Matrix.hpp  Matrix.inl  MatrixUtilities.hpp  MatrixUtilities.inl  Vector-defs.h  Vector.h  Vector.hpp  Vector.inl  VectorUtilities.hpp  VectorUtilities.inl
include/sini/sdl/: SubsystemInitializer.hpp  Window.hpp
include/sini/util/: IO.hpp  testutil.hpp  testutil.inl
include/sini2D/: Geometry.hpp
include/sini2D/geometry/: Line.hpp  Polygon.hpp
include/sini2D/gl/: Camera.hpp  GLContext.hpp  OpenGlException.hpp  SimpleRenderer.hpp  glutil.hpp
include/sini2D/math/: MathUtilities.hpp  MathUtilitiesBase.hpp  Matrix.hpp  MatrixUtilities.hpp  MatrixUtilities.inl  Vector.hpp  VectorUtilities.hpp
include/sini2D/sdl/: SdlException.hpp  SubsystemInitializer.hpp  Window.hpp
include/sini2D/util/: testutil.hpp
include/util/: IO.hpp
src/geometry/: Line.cpp  Polygon.cpp
src/gl/: Camera.cpp  GLContext.cpp  OpenGlException.cpp  SimpleRenderer.cpp  glutil.cpp
src/math/: MathUtilities.cpp  MathUtilitiesBase.cpp  Matrix.cpp  MatrixUtilities.cpp  Vector.cpp  VectorUtilities.cpp
src/sdl/: SdlException.cpp  SubsystemInitializer.cpp  Window.cpp
src/sini/: SubsystemInitializer.cpp
src/sini/geometry/: Line.cpp  Polygon.cpp
src/sini/gl/: Camera.cpp  GLContext.cpp  SimpleRenderer.cpp  Window.cpp  glutil.cpp
src/sini/math/: MathUtilitiesBase.cpp  Matrix.cpp  Vector.cpp  VectorUtilities.cpp
src/sini/sdl/: SubsystemInitializer.cpp  Window.cpp
src/sini/util/: IO.cpp  testutil.cpp
src/util/: IO.cpp  testutil.cpp
tests/: CMakeLists.txt  TestConfig.cpp  WindowTesting.cpp
tests/geometry/: LineTesting.cpp  PolygonTesting.cpp
tests/gl/: CameraTesting.cpp  DrawingBenchmark.cpp
tests/math/: MatrixTesting.cpp  VectorTesting.cpp
tests/sini/: TestConfig.cpp  WindowTesting.cpp
tests/sini/geometry/: LineTesting.cpp  PolygonTesting.cpp
tests/sini/gl/: CameraTesting.cpp  DrawingBenchmark.cpp
tests/sini/math/: MatrixTesting.cpp  VectorTesting.cpp
